# xiaomi-health-exporter

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: accounts.example.csv
xiaomi_export/: __init__.py  accounts.py  cli.py  config.py  exporter.py  mailbox.py  otp.py  xiaomi.py
xiaomi_health_exporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
